# api_gateway

./: docker-compose.yml  poetry-instruction.md  pyproject.toml
docker/prod/env/: .data.env
web/: pyproject.toml
web/api/v1/: urls.py
web/api/v1/auth_microservice/: serializers.py  services.py  urls.py  views.py
web/api/v1/auth_microservice/tests/: test_views.py
web/api/v1/cart_microservice/: choices.py  serializers.py  services.py  urls.py  views.py
web/api/v1/checkout/: serializers.py  services.py  urls.py  views.py
web/api/v1/payment/: serializers.py  urls.py  views.py
web/api/v1/products_microservice/: choices.py  serializers.py  services.py  swagger_schemas.py  urls.py  views.py
web/api/v1/products_microservice/tests/: test_views.py
web/main/: middleware.py  permissions.py  services.py  swagger_schemas.py  tasks.py  utils.py
web/payment/: services.py  urls.py
web/routers/auth_microservice/: apps.py  services.py  urls.py
web/routers/products_microservice/: apps.py  services.py  urls.py
web/src/: settings.py
web/src/additional_settings/: celery_settings.py
web/src/requirements/: base.txt  local.txt
