[tool.poetry]
name = "api-gateway"
version = "0.1.0"
description = ""
authors = ["Горелов Михаил <gorelovmihail0@gmail.com>"]
readme = "README.md"
packages = [{include = "api_gateway"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
